Added images and fixed some weird warnings

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -48,14 +48,6 @@
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
 
 .grid {
   display: inline-flex;
@@ -87,4 +79,9 @@
 .membertab:hover {
   transition: .5s ease-in-out;
   padding: 5%;
+}
+
+.bgimg {
+  background-origin: content-box;
+  background-attachment: scroll;
 }
